// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout scaffolds any other page 1`] = `
<DocumentFragment>
  <div
    class="layout__Container-sc-1rx37dj-0 gYqtRt"
  >
    <header
      class="layout__Header-sc-1rx37dj-1 fbezYz"
    >
      <a>
        <img
          alt="The Manurepo"
          class="layout__HeaderImage-sc-1rx37dj-2 dbiPNq"
          src="/images/repo.svg"
        />
      </a>
      <h2
        class="headingLg"
      >
        <a
          class="colorInherit"
          href="/"
        >
          The Manurepo
        </a>
      </h2>
    </header>
    <main />
    <div
      class="layout__BackToHomeContainer-sc-1rx37dj-3 dDWKJU"
    >
      <a
        href="/"
      >
        ← Back to home
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Layout scaffolds the home page 1`] = `
<DocumentFragment>
  <div
    class="layout__Container-sc-1rx37dj-0 gYqtRt"
  >
    <header
      class="layout__Header-sc-1rx37dj-1 fbezYz"
    >
      <img
        alt="The Manurepo"
        class="layout__HeaderImage-sc-1rx37dj-2 dbiSgk"
        src="/images/repo.svg"
      />
      <h1
        class="heading2Xl"
      >
        The Manurepo
      </h1>
    </header>
    <main />
  </div>
</DocumentFragment>
`;
